# robot_arm_reactor

./: .gitignore  README.md  requirements.txt
scripts/: run_demo.sh  run_demo_omx.sh  run_demo_openarm.sh  stop_demo.sh  stop_demo_omx.sh  stop_demo_openarm.sh
src/arm_reactor_core/: package.xml  setup.cfg  setup.py
src/arm_reactor_core/arm_reactor_core/: dashboard_node.py  dispatch.py  gesture_detector_node.py  gripper_sender.py  motion.py  motion_mapper.py  motion_scheduler.py  reactor_node.py  session_tracker.py  trajectory_sender.py
src/arm_reactor_core/arm_reactor_core/web/static/: app.js  components.css  engagement-timeline.js  index.html  style.css  tokens.css  urdf_view.js
src/arm_reactor_core/launch/: common.launch.py
src/arm_reactor_core/test/: test_dispatch.py  test_gesture_detection.py  test_motion_mapper.py  test_motion_scheduler.py  test_session_tracker.py
src/omx_motion_pack/: package.xml  setup.cfg  setup.py
src/omx_motion_pack/launch/: camera_file.launch.py  camera_gazebo.launch.py  camera_v4l2.launch.py  demo.launch.py  omx_demo.launch.py  omx_gazebo.launch.py
src/omx_motion_pack/models/external_cam/: model.sdf
src/omx_motion_pack/omx_motion_pack/: motions.py  trajectories.py
src/omx_motion_pack/test/: test_trajectories.py
src/omx_motion_pack/worlds/: empty_with_sensors.sdf
src/omx_reactor/: package.xml  setup.cfg  setup.py
src/omx_reactor/launch/: camera_external.launch.py  demo.launch.py  omx_gazebo.launch.py
src/omx_reactor/models/external_cam/: model.sdf
src/omx_reactor/omx_reactor/: context.py  dashboard_node.py  gesture_detection.py  gesture_detector_node.py  motion_mapper.py  motion_scheduler.py  motions.py  omx_trajectory_sender.py  reactor_node.py  session_tracker.py  trajectories.py
src/omx_reactor/omx_reactor/web/static/: app.js  engaging-analytics.js  index.html  style.css  va_quadrant.js
src/omx_reactor/test/: test_gesture_detection.py  test_motion_scheduler.py  test_session_tracker.py  test_trajectories.py
src/openarm_motion_pack/: package.xml  setup.cfg  setup.py
src/openarm_motion_pack/launch/: openarm_demo.launch.py
src/openarm_motion_pack/openarm_motion_pack/: motions.py  trajectories.py
src/openarm_motion_pack/test/: test_trajectories.py
