<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omx_motion_pack</name>
  <version>0.1.0</version>
  <description>OMX (OpenManipulator-X, 4-DOF) motion pack — trajectories + Motion list for arm_reactor_core. OMX-specific Gazebo bringup + external camera SDF + launch.</description>
  <maintainer email="skong097@gmail.com">gjkong</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>
  <depend>arm_reactor_core</depend>

  <exec_depend>open_manipulator_description</exec_depend>
  <exec_depend>open_manipulator_bringup</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
