<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omx_reactor</name>
  <version>0.1.0</version>
  <description>OMX reactor - multimodal customer signal to expressive motion (Gazebo demo)</description>
  <maintainer email="skong097@gmail.com">gjkong</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>cv_bridge</depend>

  <depend>dobi_npc_msgs</depend>
  <depend>dobi_npc_emotion</depend>

  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>open_manipulator_description</exec_depend>
  <exec_depend>open_manipulator_bringup</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
